feat: update register api
